# backgammon

./: LICENSE  README.md  app.py  models.py  pyproject.toml  room.py
api/: Dockerfile  app.py  decorators.py  models.py  pyproject.toml  room.py  tests.py
api/templates/: session copy.html
templates/: session.html
web/: nginx.conf
web/backgammon_react_app/public/: index.html
web/backgammon_react_app/public/React App_files/: 0.chunk.js  bundle.js  main.6204ce4298c8627924f4.hot-update.js  main.70d132ccf09f1239b5b1.hot-update.js  main.f12afbed5925fb911530.hot-update.js  main.f271304dc6947a3ad65c.hot-update.js
web/backgammon_react_app/src/: App.js  Bar.js  BearedOff.js  Board.js  Chat.js  Dice.js  EndPoints.js  Game.js  LandingPage.js  NewGameButton.js  Player.js  Point.js  Points.js  TopPanel.js  TwoDice.js  chat.css  index.css  index.js
web/bg-client/: package-lock.json  package.json
web/bg-client/public/: React App.htm  index.html
web/bg-client/public/React App_files/: main.5de210cbfb41adc91e9f.hot-update.js  main.92f78d29db344c6cd8b9.hot-update.js  main.chunk.js  main.d20d34ab456785d0bbe1.hot-update.js
web/bg-client/src/: App.js  Bar.js  BearedOff.js  Board.js  Dice.js  Game.js  GameIDForm.js  LandingPage.js  NewGameButton.js  Player.js  Point.js  Points.js  StartGameButton.js  TwoDice.js  index.css  index.js
