[tool.poetry]
name = "backgammon"
version = "0.1.0"
description = "Backgamon game, flask and websockets"
authors = ["serg-e <smosesov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.1"
flask-socketio = "^4.2.1"
gevent = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
